--- a/core/src/main/webapp/WEB-INF/ns/flows/login/login.xhtml
+++ b/core/src/main/webapp/WEB-INF/ns/flows/login/login.xhtml
@@ -8,15 +8,7 @@
 
 <h:head>
     <title>Login</title>
-
-    <h:outputStylesheet library = "css" name = "ali.css"  />
-    <h:outputStylesheet library = "css" name = "/ali.css"  />
-    <h:outputStylesheet name="/css/ali.css" />
-    <h:outputStylesheet name="css/ali.css" />
-    <h:outputStylesheet name="/ali.css" />
-    <h:outputStylesheet name="ali.css" />
-    <link href="../resources/css/ali.css" rel="stylesheet" type="text/css"/>
-    <link href="./resources/ali.css" rel="stylesheet" type="text/css"/>
+    <link href="./resources/css/ali.css" rel="stylesheet" type="text/css"/>
 
 </h:head>
 
@@ -24,7 +16,7 @@
     <h:form >
 
         <p:panelGrid columns="1" styleClass="ui-fluid center ui-noborder">
-            <h2>Login</h2>
+            <h2 class="ali">Login</h2>
             #{main.doLogin()} sss #{msg['login.txt']}
 
             <p:outputLabel value="Login failed!" styleClass="red"
@@ -33,7 +25,7 @@
             <p:inputText id="username" placeholder="User name" />
             <p:password id="password" placeholder="Password" />
 
-            <p:commandButton value="Login" action="doLogin" ajax="false"/>
+            <p:commandButton value="Login" action="doLogin" styleClass="ali"  ajax="false"/>
             <p:commandButton  value="Ajax Submit" id="ajax" ajax="false"
                               style="margin-right:20px;"
                               styleClass="ui-priority-primary"/>
