--- a/core/src/main/webapp/WEB-INF/ns/flows/login/login.xhtml
+++ b/core/src/main/webapp/WEB-INF/ns/flows/login/login.xhtml
@@ -8,11 +8,15 @@
 
 <h:head>
     <title>Login</title>
-    <link href="./resources/css/ali.css" rel="stylesheet" type="text/css"/>
 
 </h:head>
 
 <h:body>
+    <f:facet name="last">
+        <link href="./resources/css/ali.css" rel="stylesheet" type="text/css"/>
+
+    </f:facet>
+
     <h:form >
 
         <p:panelGrid columns="1" styleClass="ui-fluid center ui-noborder">
