--- a/core/src/main/webapp/WEB-INF/ns/flows/login/login.xhtml
+++ b/core/src/main/webapp/WEB-INF/ns/flows/login/login.xhtml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:c="http://java.sun.com/jsp/jstl/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
     <title>Login</title>
-
+    <link href="./resources/css/style.css" rel="stylesheet" type="text/css"/>
 </h:head>
 
 <h:body>
-    <f:facet name="last">
-        <link href="./resources/css/ali.css" rel="stylesheet" type="text/css"/>
-
-    </f:facet>
 
     <h:form >
 
         <p:panelGrid columns="1" styleClass="ui-fluid center ui-noborder">
             <h2 class="ali">Login</h2>
-            #{main.doLogin()} sss #{msg['login.txt']}
+            #{main.doLogin()} sss
 
             <p:outputLabel value="Login failed!" styleClass="red"
                            rendered="${!empty param['error']}" />
+
+            <p:outputLabel value="#{msg['login.txt']}" styleClass="ali" />
 
             <p:inputText id="username" placeholder="User name" />
             <p:password id="password" placeholder="Password" />
