--- a/core/src/main/webapp/WEB-INF/flows/ns/main/page.xhtml
+++ b/core/src/main/webapp/WEB-INF/flows/ns/main/page.xhtml
@@ -1,15 +1,17 @@
+
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-                xmlns:p="http://primefaces.org/ui"
-                xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:ps="http://primefaces.org/sentinel"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:c="http://java.sun.com/jsp/jstl/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/WEB-INF/resources/templates/defaultTemplate.xhtml">
 
     <ui:define name="title">Test Page</ui:define>
     <ui:define name="content">
 
         <div class="Container">
-            Mian page 22
+            Mian page
         </div>
     </ui:define>
 </ui:composition>
