--- a/core/src/main/webapp/WEB-INF/flows/ns/main/main.xhtml
+++ b/core/src/main/webapp/WEB-INF/flows/ns/main/main.xhtml
@@ -216,7 +216,7 @@
                         <p:panel>
                             <div class="Wid100 TexAlCenter">
                                 <div class="ContainerIndent">
-                                    <p:graphicImage name="images/audi.jpg" library="demo" styleClass="Wid100"/>
+<!--                                    <p:graphicImage name="images/audi.jpg" library="demo" styleClass="Wid100"/>-->
                                     <div class="EmptyBox10"></div>
                                     <span class="Fs20 DispBlock hardblue">Audi A8<br/><span class="Fs12 softgray">Sales Chart - Group At By Color</span></span>
                                 </div>
@@ -230,7 +230,7 @@
                         <p:panel>
                             <div class="Wid100 TexAlCenter">
                                 <div class="ContainerIndent">
-                                    <p:graphicImage name="images/bmw.jpg" library="demo" styleClass="Wid100"/>
+<!--                                    <p:graphicImage name="images/bmw.jpg" library="demo" styleClass="Wid100"/>-->
                                     <div class="EmptyBox10"></div>
                                     <span class="Fs20 DispBlock hardblue">BMW i8 <br/><span class="Fs12 softgray">Sales Chart - Group At By Color</span></span>
                                 </div>
@@ -244,7 +244,7 @@
                         <p:panel>
                             <div class="Wid100 TexAlCenter">
                                 <div class="ContainerIndent">
-                                    <p:graphicImage name="images/aston.jpg" library="demo" styleClass="Wid100"/>
+<!--                                    <p:graphicImage name="images/aston.jpg" library="demo" styleClass="Wid100"/>-->
                                     <div class="EmptyBox10"></div>
                                     <span class="Fs20 DispBlock hardblue">Aston Martin DB9 <br/><span class="Fs12 softgray">Sales Chart - Group At By Color</span></span>
                                 </div>
