--- a/core/src/main/webapp/WEB-INF/flows/ns/login/login.xhtml
+++ b/core/src/main/webapp/WEB-INF/flows/ns/login/login.xhtml
@@ -1,58 +1,59 @@
-
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      template="/WEB-INF/resources/templates/loginTemplate.xhtml">
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:p="http://primefaces.org/ui"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:c="http://java.sun.com/jsp/jstl/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:P="http://java.sun.com/jsf/html"
+                template="/WEB-INF/resources/templates/loginTemplate.xhtml">
 
     <ui:define name="title">Test Page</ui:define>
     <ui:define name="content">
 
-    <div class="Container">
-        <div class="Container80 MaxWid500 Fnone MarAuto TexAlCenter PaddingTopPercent10 ">
+        <div class="Container">
+            <div class="Container80 MaxWid500 Fnone MarAuto TexAlCenter PaddingTopPercent10">
+                <a href="" id="login-logo">
+                    <p:graphicImage value="./resources/sentinel-layout/images/LOGO.svg" styleClass="Fleft" />
+                    <span class="Fs30 FontTitilliumSemiBoldItalic Fleft"><span class="softblue">SENTINEL</span><span class="hardblue">LAYOUT</span></span>
+                </a>
+                <div class="EmptyBox10"></div>
+            </div>
 
-            <div class="EmptyBox10"></div>
-        </div>
-
-        <!-- LOGIN BOX COVER START -->
-        <div class="Container80 MaxWid500  white-back Fnone MarAuto BordRad10" id="login-box">
-            <div class="Container">
-                <div class="Container50 TexAlCenter Animated05 BoxSizeBorder TabBtn right" role="1">
-                    <div class="Container80 Fnone MarAuto FontBold"> بازیابی رمز عبور<i class="icon-key-1"></i></div>
-                </div>
-                <div class="Container50 TexAlCenter Animated05 BoxSizeBorder TabBtn left TabBtnActiveLeft" role="2">
-                    <div class="Container80 Fnone MarAuto FontBold"> ورود کاربران <i class="icon-lock"></i></div>
-                </div>
-                <h:form id="loginFormId" prependId="false">
-                    <div class="Container90 Fnone MarAuto DispNone TexAlCenter TabContent OvHidden" id="TAB1">
-                        <p:messages id="messages2"  autoUpdate="true" closable="true" />
-                        <div class="EmptyBox50"></div>
-                        <p:inputText maxlength="12" id="tel"  requiredMessage="لطفا شماره تلفن همراه خود را وارد نمائید"  placeholder="شماره تلفن همراه" styleClass="Container80 Fnone MarAuto Fs18"/>
-                        <div class="EmptyBox20"></div>
-                        <p:commandButton styleClass="BlueButton" resetValues="true" ajax="false" value="ارسال" action="dologin"   update="messages2 tel" />
-                        <div class="EmptyBox50"></div>
+            <!-- LOGIN BOX COVER START -->
+            <div class="Container80 MaxWid500 white-back Fnone MarAuto BordRad10" id="login-box">
+                <div class="Container">
+                    <div class="Container50 TexAlCenter Animated05 BoxSizeBorder TabBtn left TabBtnActiveLeft" role="1">
+                        <div class="Container80 Fnone MarAuto FontBold"><i class="icon-lock"></i> Login</div>
+                    </div>
+                    <div class="Container50 TexAlCenter Animated05 BoxSizeBorder TabBtn right" role="2">
+                        <div class="Container80 Fnone MarAuto FontBold"><i class="icon-key-1"></i> Permissions</div>
                     </div>
 
-                    <div class="Container90 Fnone MarAuto TexAlCenter TabContent OvHidden" id="TAB2">
-                        <p:messages id="messages"  autoUpdate="true" closable="true" />
+                    <div class="Container90 Fnone MarAuto TexAlCenter TabContent OvHidden" id="TAB1">
+                        <P:form prependId="false">
                         <div class="EmptyBox50"></div>
-                        <p:inputText id="username" placeholder="نام کاربری"  value="" styleClass="Container80 Fnone MarAuto Fs18"/>
+                        <p:inputText value="" id="username" placeholder="Username" styleClass="Container80 Fnone MarAuto Fs18"/>
                         <div class="EmptyBox10"></div>
-                        <p:password id="password" placeholder="گذرواژه" value=""  styleClass="Container80 Fnone MarAuto Fs18"/>
+                        <p:password value="" id="password" placeholder="Password" styleClass="Container80 Fnone MarAuto Fs18" feedback="false"/>
                         <div class="EmptyBox20"></div>
                         <div class="Container85 Fnone MarAuto softgray">
+                            <p:selectBooleanCheckbox value="accept" styleClass="Fleft" itemLabel="I Accept Terms And Policies"/>
                         </div>
                         <div class="EmptyBox30"></div>
-                        <p:commandButton styleClass="BlueButton" resetValues="true" ajax="false" value="ورود" action="doLogin"   update="messages" />
-
-                        <div class="EmptyBox20"></div>
+                            <p:commandButton styleClass="BlueButton" resetValues="true" ajax="false" value="Log in" />
+                        <div class="EmptyBox50"></div>
+                        </P:form>
                     </div>
-                </h:form>
+
+                    <div class="Container90 Fnone MarAuto DispNone TexAlCenter TabContent OvHidden" id="TAB2">
+                        <div class="EmptyBox50"></div>
+                        <p:inputText value="" placeholder="Your Email Address" styleClass="Container80 Fnone MarAuto Fs18"/>
+                        <div class="EmptyBox20"></div>
+                        <p:button  value="Send Access Request" styleClass="Fs16"></p:button>
+                        <div class="EmptyBox50"></div>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     <!-- LOGIN BOX COVER END -->
 
     </ui:define>
